--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   REGISTRY: ghcr.io # wich registry do you want to use ?
-  NAMESPACE: ${{ github.repository }} # wich namespace do you want to use ? what is ${{github.repository }} ?
+  NAMESPACE: dakoro/docker_tuto_2 # wich namespace do you want to use ? what is ${{github.repository }} ?
   PLATFORM: linux/amd64 # wich platform do you want to use ? linux/amd64, linux/arm64, linux/arm/v7, linux/arm/v6
   TAG: 1 # wich tag do you want to use ?
 
